--- a/demo-app/package.json
+++ b/demo-app/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "json-server": "^0.15.0",
+    "jsonwebtoken": "^8.5.1",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.4",
     "mobx-state-tree": "^3.14.0",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
